@@ -2606,6 +2606,7 @@ function onCanvasKeyDown( event ) {
                   }
                   this.viewport.applyConstraints();
                 }
+                event.preventDefault = true;
                 break;
             case 40://down arrow
                 if (!canvasKeyDownEventArgs.preventVerticalPan) {
@@ -2616,23 +2617,29 @@ function onCanvasKeyDown( event ) {
                   }
                   this.viewport.applyConstraints();
                 }
+                event.preventDefault = true;
                 break;
             case 37://left arrow
                 if (!canvasKeyDownEventArgs.preventHorizontalPan) {
                   this.viewport.panBy(this.viewport.deltaPointsFromPixels(new $.Point(-this.pixelsPerArrowPress, 0)));
                   this.viewport.applyConstraints();
                 }
+                event.preventDefault = true;
                 break;
             case 39://right arrow
                 if (!canvasKeyDownEventArgs.preventHorizontalPan) {
                   this.viewport.panBy(this.viewport.deltaPointsFromPixels(new $.Point(this.pixelsPerArrowPress, 0)));
                   this.viewport.applyConstraints();
                 }
+                event.preventDefault = true;
                 break;
             default:
                 //console.log( 'navigator keycode %s', event.keyCode );
+                event.preventDefault = false;
                 break;
         }
+    } else {
+        event.preventDefault = false;
     }
 }
 function onCanvasKeyPress( event ) {
@@ -2652,14 +2659,17 @@ function onCanvasKeyPress( event ) {
             case 61://=|+
                 this.viewport.zoomBy(1.1);
                 this.viewport.applyConstraints();
+                event.preventDefault = true;
                 break;
             case 45://-|_
                 this.viewport.zoomBy(0.9);
                 this.viewport.applyConstraints();
+                event.preventDefault = true;
                 break;
             case 48://0|)
                 this.viewport.goHome();
                 this.viewport.applyConstraints();
+                event.preventDefault = true;
                 break;
             case 119://w
             case 87://W
@@ -2671,6 +2681,7 @@ function onCanvasKeyPress( event ) {
                     }
                     this.viewport.applyConstraints();
                   }
+                  event.preventDefault = true;
                   break;
             case 115://s
             case 83://S
@@ -2682,18 +2693,21 @@ function onCanvasKeyPress( event ) {
                   }
                   this.viewport.applyConstraints();
                 }
+                event.preventDefault = true;
                 break;
             case 97://a
                 if (!canvasKeyPressEventArgs.preventHorizontalPan) {
                   this.viewport.panBy(this.viewport.deltaPointsFromPixels(new $.Point(-40, 0)));
                   this.viewport.applyConstraints();
                 }
+                event.preventDefault = true;
                 break;
             case 100://d
                 if (!canvasKeyPressEventArgs.preventHorizontalPan) {
                   this.viewport.panBy(this.viewport.deltaPointsFromPixels(new $.Point(40, 0)));
                   this.viewport.applyConstraints();
                 }
+                event.preventDefault = true;
                 break;
             case 114: //r - clockwise rotation
               if(this.viewport.flipped){
@@ -2702,6 +2716,7 @@ function onCanvasKeyPress( event ) {
                 this.viewport.setRotation($.positiveModulo(this.viewport.degrees + this.rotationIncrement, 360));
               }
               this.viewport.applyConstraints();
+              event.preventDefault = true;
               break;
             case 82: //R - counterclockwise  rotation
               if(this.viewport.flipped){
@@ -2710,14 +2725,19 @@ function onCanvasKeyPress( event ) {
                 this.viewport.setRotation($.positiveModulo(this.viewport.degrees - this.rotationIncrement, 360));
               }
               this.viewport.applyConstraints();
+              event.preventDefault = true;
               break;
             case 102: //f
               this.viewport.toggleFlip();
+              event.preventDefault = true;
               break;
             default:
                 // console.log( 'navigator keycode %s', event.keyCode );
+                event.preventDefault = false;
                 break;
         }
+    } else {
+        event.preventDefault = false;
     }
 }
 
@@ -3240,6 +3260,8 @@ function onCanvasScroll( event ) {
             }
         }
     }
+
+    event.preventDefault = true;
 }
 
 function onContainerEnter( event ) {
